# free-capstone

./: app.py  patterns.json
code/test_gemini/: app.py  logs.json  patterns.json  pyproject.toml
code/ui/: Chat Proxy.html  login.html
code2/code/: README.md  app.py  database.py  logs.json  models.py  users.json  주소.txt
code2/code/instance/: database.db
code2/code/routes/: admin.py
code2/code/templates/: Chat Proxy.html  admin.html  login.html
